--- a/app/src/main/res/layout/activity_ema.xml
+++ b/app/src/main/res/layout/activity_ema.xml
@@ -64,7 +64,8 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="10dp"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="10dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -128,7 +129,8 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="10dp"
-                card_view:cardCornerRadius="10dp">
+                card_view:cardCornerRadius="10dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -192,7 +194,8 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="10dp"
-                card_view:cardCornerRadius="10dp">
+                card_view:cardCornerRadius="10dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -256,7 +259,8 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="10dp"
-                card_view:cardCornerRadius="10dp">
+                card_view:cardCornerRadius="10dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -330,13 +334,14 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:lineSpacingExtra="8sp"
                         android:text="@string/ema_question_5"
                         android:textColor="#636363"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textAlignment="center"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
