--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -61,6 +61,8 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frg_me_step2_container"
         android:layout_width="match_parent"
@@ -104,192 +106,13 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/me_listview_phone_container"
+                    android:id="@+id/me_listview_integrate_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/view_bottom_border"
-                        android:orientation="horizontal"
-                        android:paddingVertical="5dp">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginHorizontal="6dp"
-                            android:src="@drawable/ic_f_phoneusage" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:fontFamily="@font/notosanscjkkrregular"
-                            android:includeFontPadding="false"
-                            android:text="휴대폰 사용"
-                            android:textSize="@dimen/my_text_size3" />
-
-                    </LinearLayout>
-
                     <ListView
-                        android:id="@+id/me_listview_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="#00000000" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/me_listview_activity_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/view_bottom_border">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginHorizontal="6dp"
-                            android:src="@drawable/ic_f_activity" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/notosanscjkkrregular"
-                            android:includeFontPadding="false"
-                            android:paddingVertical="3dp"
-                            android:text="신체 활동"
-                            android:textSize="@dimen/my_text_size3" />
-
-                    </LinearLayout>
-
-
-                    <ListView
-                        android:id="@+id/me_listview_activity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="#00000000" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/me_listview_location_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/view_bottom_border">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginHorizontal="6dp"
-                            android:src="@drawable/ic_f_location" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/notosanscjkkrregular"
-                            android:includeFontPadding="false"
-                            android:paddingVertical="3dp"
-                            android:text="활동 반경"
-                            android:textSize="@dimen/my_text_size3" />
-
-                    </LinearLayout>
-
-
-                    <ListView
-                        android:id="@+id/me_listview_location"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="#00000000" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/me_listview_social_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/view_bottom_border">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginHorizontal="6dp"
-                            android:src="@drawable/ic_f_social" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/notosanscjkkrregular"
-                            android:includeFontPadding="false"
-                            android:paddingVertical="3dp"
-                            android:text="소셜"
-                            android:textSize="@dimen/my_text_size3" />
-
-                    </LinearLayout>
-
-
-                    <ListView
-                        android:id="@+id/me_listview_social"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="#00000000" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/me_listview_sleep_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/view_bottom_border">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginHorizontal="6dp"
-                            android:src="@drawable/ic_f_sleep" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/notosanscjkkrregular"
-                            android:includeFontPadding="false"
-                            android:paddingVertical="3dp"
-                            android:text="수면"
-                            android:textSize="@dimen/my_text_size3" />
-
-                    </LinearLayout>
-
-
-                    <ListView
-                        android:id="@+id/me_listview_sleep"
+                        android:id="@+id/me_listview_integrate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:divider="#00000000" />
@@ -298,8 +121,188 @@
 
             </LinearLayout>
 
-
         </ScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/me_condition2_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:layout_below="@id/txt_reason"
+            app:layout_constraintVertical_weight="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_reason"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:id="@+id/me_condition2_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:paddingVertical="25dp"
+                android:layout_marginHorizontal="14dp"
+                android:background="@color/color_low_bg"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <RelativeLayout
+                    android:id="@+id/me_stress_report_img_container1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp">
+
+                    <ImageView
+                        android:id="@+id/me_stress_report_img1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/mobile"
+                        android:alpha="0.3"
+                        android:layout_centerInParent="true"/>
+
+                    <TextView
+                        android:id="@+id/me_stress_report_txt1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/me_stress_report_img1"
+                        android:text="휴대폰 사용"
+                        android:textColor="@color/border_btn_gray"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="@dimen/my_text_size0"/>
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/me_stress_report_img_container2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp">
+
+                    <ImageView
+                        android:id="@+id/me_stress_report_img2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/social"
+                        android:alpha="0.3"
+                        android:layout_centerInParent="true"/>
+
+                    <TextView
+                        android:id="@+id/me_stress_report_txt2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/me_stress_report_img2"
+                        android:text="소셜 활동"
+                        android:textColor="@color/border_btn_gray"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="@dimen/my_text_size0"/>
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/me_stress_report_img_container3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp">
+
+                    <ImageView
+                        android:id="@+id/me_stress_report_img3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.3"
+                        android:src="@drawable/place"
+                        android:layout_centerInParent="true"/>
+
+                    <TextView
+                        android:id="@+id/me_stress_report_txt3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/me_stress_report_img3"
+                        android:text="장소 이동"
+                        android:textColor="@color/border_btn_gray"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="@dimen/my_text_size0"/>
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/me_stress_report_img_container4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp">
+
+                    <ImageView
+                        android:id="@+id/me_stress_report_img4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.3"
+                        android:src="@drawable/physical"
+                        android:layout_centerInParent="true"/>
+
+                    <TextView
+                        android:id="@+id/me_stress_report_txt4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/me_stress_report_img4"
+                        android:text="신체 활동"
+                        android:textColor="@color/border_btn_gray"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="@dimen/my_text_size0"/>
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/me_stress_report_img_container5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp">
+
+                    <ImageView
+                        android:id="@+id/me_stress_report_img5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/sleep"
+                        android:alpha="0.3"
+                        android:layout_centerInParent="true"/>
+
+                    <TextView
+                        android:id="@+id/me_stress_report_txt5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/me_stress_report_img5"
+                        android:text="수면"
+                        android:textColor="@color/border_btn_gray"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_centerHorizontal="true"
+                        android:textSize="@dimen/my_text_size0"/>
+
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/frg_me_step2_no_features"
@@ -361,7 +364,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stress_reason_container" />
+            app:layout_constraintTop_toBottomOf="@id/stress_reason_container"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frg_me_date_container"
