--- a/app/src/main/res/layout/survey_dialog.xml
+++ b/app/src/main/res/layout/survey_dialog.xml
@@ -107,6 +107,7 @@
             />
 
         <EditText
+            android:id="@+id/survey_check5_edittext"
             android:layout_marginStart="1dp"
             android:layout_width="137dp"
             android:layout_height="wrap_content"
