--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -13,7 +13,7 @@
     <dimen  name="fsv_contents_text_size">16sp</dimen>
 
     <dimen  name="guide_text_size">10sp</dimen>
-
+    <dimen name="my_text_size0">12dp</dimen>
     <dimen  name="my_text_size1">14dp</dimen>
     <dimen  name="my_text_size2">15dp</dimen>
     <dimen  name="my_text_size3">16dp</dimen>
