--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
 
     <color name="textColor_default">#636363</color>
     <color name="textColor_default_light">#7a7a7a</color>
+    <color name="textColor_42">#424242</color>
     <color name="textColor_light">#8d8d8d</color>
     <color name="textColor_blue">#3e89e0</color>
     <color name="hintColor">#B5B5B5</color>
