--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_me"
+        android:id="@id/navigation_me"
         android:enabled="true"
         android:icon="@drawable/ic_under_1_man"
         android:title="@string/navigation_first"/>
 
     <item
-        android:id="@+id/navigation_care"
+        android:id="@id/navigation_care"
         android:enabled="true"
         android:icon="@drawable/ic_under_2_heart"
         android:title="@string/navigation_second"/>
 
     <item
-        android:id="@+id/navigation_report"
+        android:id="@id/navigation_report"
         android:enabled="true"
         android:icon="@drawable/ic_under_3_record"
         android:title="@string/navigation_third"/>
