--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -98,7 +98,8 @@
             app:layout_constraintBottom_toTopOf="@id/txt_wait_next_report"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_reason">
+            app:layout_constraintTop_toBottomOf="@id/txt_reason"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
