--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,9 +46,9 @@
     <color name="color_point_bg">#f1f5fa</color>
 
 <!--    <color name="color_low_bg">#f7f9fc</color>-->
-    <color name="color_low_bg">#86a9d5</color>
-    <color name="color_littlehigh_bg">#e6ca62</color>
-    <color name="color_high_bg">#db969d</color>
+    <color name="color_low_bg">#f7f9fc</color>
+    <color name="color_littlehigh_bg">#fefcf2</color>
+    <color name="color_high_bg">#f9f4f5</color>
 
     <color name="color_low">#86a9d5</color>
     <color name="color_littlehigh">#e6ca62</color>
