2021-01-15/jeongin/ 버그 픽스 - CarechildFragment condition 2,3일때 상세 화면 수정 - 마음 기록에서 step2일때 예측 결과 없을때 상단 버튼 바뀌지 않도록 수정 - 이유는 무엇일까요 string 삭제
- [x] 스트레스 리포트에서 스트레스 레벨 1일때 문구 지우기

- [x] 스트레스 리포트에서 리스트뷰 divider 지우기

- [x] 지금의 나에서 features_id 겹쳐서 보이는 문제

- [x] 마음 기록에서 중단 되는 문제

- [x] 마음 기록 상세에서 컨디션에 따라 컨테이너 보이도록 바꾸기
- [x] 마음 기록 상세 정각 이전에는 안 보이도록
- [x] 마음 기록 상세 feature_id 제대로 안보이는 문제
- [x] 마음 기록 step2 시작일 11시에는 데이터 못 찾음

--- a/app/src/main/res/layout/fragment_care_child1.xml
+++ b/app/src/main/res/layout/fragment_care_child1.xml
@@ -53,9 +53,9 @@
             android:layout_margin="20dp"
             android:background="#00000000"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:tint="@color/textColor_default_light"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/textColor_default_light" />
 
         <ImageView
             android:id="@+id/child1_step2_img1"
@@ -76,6 +76,7 @@
             android:layout_height="0dp"
             android:layout_marginHorizontal="14dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
             android:background="@color/color_low_bg"
             android:fillViewport="true"
             android:orientation="vertical"
@@ -309,7 +310,7 @@
             android:layout_marginTop="24dp"
             android:fontFamily="@font/notosanscjkkrregular"
             android:includeFontPadding="false"
-            android:text="@string/string_stress_why"
+            android:text=""
             android:textAlignment="center"
             android:textColor="@color/textColor_default"
             android:textSize="@dimen/my_text_size3"
