--- a/app/src/main/res/layout/fragment_report_step2.xml
+++ b/app/src/main/res/layout/fragment_report_step2.xml
@@ -917,8 +917,8 @@
                         android:fontFamily="@font/notosanscjkkrmedium"
                         android:includeFontPadding="false"
                         android:text="tags"
-                        android:paddingVertical="50dp"
                         android:textAlignment="center"
+                        android:gravity="center"
                         android:textSize="@dimen/my_text_size3"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="@id/frg_report_condition3_container"
