--- a/app/src/main/res/layout/fragment_stress_report2.xml
+++ b/app/src/main/res/layout/fragment_stress_report2.xml
@@ -186,7 +186,9 @@
                         <ListView
                             android:id="@+id/listview_integrate"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:dividerHeight="0dp"
+                            android:divider="#ffffff"/>
 
                     </LinearLayout>
 
