--- a/app/src/main/res/layout/fragment_report_step2.xml
+++ b/app/src/main/res/layout/fragment_report_step2.xml
@@ -527,6 +527,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/selected_day_intervention"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="13dp"
